code modifications so it no longer wraps long lines, smaller on small screens

--- a/assets/sass/styles/_code.scss
+++ b/assets/sass/styles/_code.scss
@@ -21,8 +21,9 @@ pre[class*="language"] {
 	direction: ltr;
 	text-align: left;
 	white-space: pre;
-	word-spacing: normal;
-	word-break: normal;
+  word-spacing: normal;
+  word-break: normal;
+  word-wrap: normal;
 	line-height: 1.5;
 
 	-moz-tab-size: 4;
